# RISC-V-Simulator

./: .gitignore  CMakeLists.txt  README.md
src/: PTF.hpp  cpu.hpp  global.h  main.cpp  predictor.hpp  stage.cpp  stage.h  stage.hpp
